Agregados datos docker streamlit

--- a/Proyecto Final/airflow-main/dashboard/Dockerfile
+++ b/Proyecto Final/airflow-main/dashboard/Dockerfile
@@ -12,8 +12,9 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8501
 
-COPY ./images/ ./images/
-COPY ./map_sources/ ./map_sources/
+COPY ./images/covid-19-updates-banner-a.png .
+COPY ./images/galileo.png .
+COPY ./map_sources/world-countries.json .
 COPY ./main.py .
 COPY ./funciones.py .
 ENTRYPOINT ["streamlit", "run"]
